tests/query_errors/pp_unrecognized_token5/error.txt
Error: 
    1 | use foo :: bar use;
      |                ^^^ Found the token `use` but expected one of `,`, `::`, `;`, `]`, `as`, `end`, `script`, `with`
      |                    NOTE: Did you mean to use `,`?
    2 | 
    3 | "hello {snot}"